--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -25,7 +25,7 @@
 
         <p>
             　ガンダム作品には，作中の暦が「宇宙世紀」のものとそうでないものがあります．
-            暦が宇宙世紀である作品同士はストーリーが繋がっているわけです．
+            暦が宇宙世紀である作品同士は同じ世界線でストーリーが繋がっているわけです．
             ここではわかりやすいように，ガンダム作品を宇宙世紀シリーズとアナザーシリーズ
             （つまり，宇宙世紀シリーズでない作品たち）の二つに分けて説明します．
         </p>
