--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -77,6 +77,10 @@
             好きだと答えていたケンプファーが出てくるのはポケ戦です．
             また，主人公のアルを演じているのは声変わり前の浪川大輔さんですので，声優ファンの方は是非．
         </p>
+
+        <h3>機動戦士ガンダム 第08小隊（おすすめ度：★★★★★）</h3>
+
+        <p>　08小隊は</p>
           
         <a href = "index.html">元のページに戻る．</a>
 
