--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -59,7 +59,8 @@
         <p>
             　初代・「機動戦士ガンダム」は放送から46年経っていますが，今観ても充分面白い作品だと思います．
             ロボットアニメなのだからお子様向けなのではないかと思われがちですが，
-            SFとしてきちんと作り込まれていたり勧善懲悪でなかったりと大人でも楽しめると思います（何なら大人の方が楽しめると思います）．
+            SFとしてきちんと作り込まれていたり勧善懲悪でなかったりと大人でも楽しめると思います
+            （何なら大人の方が楽しめると思います．ぼくは小学3年生のときに一度観て，その後に何回か観ているのですが明らかに齢を重ねてからの方が楽しく観れています）．
             TV版は全部で43話ありますが劇場版もあるので，時間がないという人は劇場版を観ると良いとは思いますが，
             劇場版は「ククルス・ドアンの島」などの神回が削られているのでいつかはTV版も観てほしいです．
         </p>
