--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>ぬほれ</title>
         <meta charset="UTF-8">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="a.css">
     </head>
     <body>
