--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="math-background">
+          <div>$$f(x)=\lim_{n\to\infty}\lim_{k\to\infty}\cos^{2k}(n!\pi x)$$</div>
+          <div>$$\int_a^b f(x)\,dx$$</div>
+          <div>$$\frac{d}{dx}e^x = e^x$$</div>
+          <div>$$x+y \leq z$$</div>
+        </div>
         <div class="container">
         <h1>
             ぬほれ（nuhore）
