--- a/book.html
+++ b/book.html
@@ -33,6 +33,8 @@
                 <li>ソクラテスの弁明 クリトン，プラトン．</li>
 
                 <li>日本の思想，丸山真男．</li>
+
+                <li>三四郎，夏目漱石．</li>
             
             </ul>
 
