--- a/book.html
+++ b/book.html
@@ -35,6 +35,8 @@
                 <li>日本の思想，丸山真男．</li>
 
                 <li>三四郎，夏目漱石．</li>
+
+                <li>星が人を愛すことなかれ，斜線堂有紀．</li>
             
             </ul>
 
