--- a/book.html
+++ b/book.html
@@ -11,10 +11,8 @@
         
             <h1>読んだ本</h1>
 
-            <p>　一応理系ではあるので「読書が好きです」と言うと大抵驚かれるのですが，
-            中学3年生の終わりごろから高校1年生のはじめくらいまでは文学部に行こうと考えていたくらいには読書は好きです．</p>
-            <p>　はじめは本の感想でも書こうかと考えていたのですが，
-                読後の感想が「面白かった」，「わくわくした」，「ドキドキした」くらいしかない人間にそんなものはできませんでした．</p>
+            <p>　小説を読むことが殆どですが，時々新書読みます．
+            単行本が好きですが嵩張るの，通学時間に読むのは文庫本が多い気がします．</p>
         
             <h2>2025年</h2>
 
