--- a/book.html
+++ b/book.html
@@ -11,8 +11,8 @@
         
             <h1>読んだ本</h1>
 
-            <p>　小説を読むことが殆どですが，時々新書読みます．
-            単行本が好きですが嵩張るの，通学時間に読むのは文庫本が多い気がします．</p>
+            <p>　小説を読むことが殆どですが，時々新書なども読みます．
+            電子書籍は基本的に読まないです．</p>
         
             <h2>2025年</h2>
 
