--- a/dajare.html
+++ b/dajare.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>思いついたダジャレ一覧</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <div class="container">
 
+        <h1>思いついたダジャレ一覧</h1>
+
+        <ul>
+          <li>ドラム叩くドラ息子</li>
+          <li>カーテンには勝てん</li>
+          <li>ジョジョを徐々に好きになる</li>
+          <li>ギターがでぎたー</li>
+          <li>sinを微分してくださいん</li>
+          <li>夜間にやかんを焼かんで</li>
+        </ul>
+
+        <a href = "index.html">元のページに戻る．</a>
+
+      </div>
+    </body>
+</html>
