--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <ul>
             <li><a href = "aboutme.html">自己紹介</a></li>
-            <!--<li><a href = "pdf.html">作ったpdf置き場</a></li>-->
+            <li><a href = "dajare.html">思いついただじゃれ一覧</a></li>
             <li><a href = "book.html">読んだ本</a></li>
             <li><a href = "mathbook.html">持っている数学書一覧</a></li>
             <!--<li><a href = "forgundambeginner.html">初心者向けガンダム講座（現在制作中）</li>-->
