--- a/dajare.html
+++ b/dajare.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>思いついたダジャレ一覧</title>
+        <title>思いついただじゃれ一覧</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <div class="container">
 
-        <h1>思いついたダジャレ一覧</h1>
+        <h1>思いついただじゃれ一覧</h1>
 
         <ul>
           <li>ドラム叩くドラ息子</li>
