--- a/dajare.html
+++ b/dajare.html
@@ -17,6 +17,8 @@
           <li>ギターがでぎたー</li>
           <li>sinを微分してくださいん</li>
           <li>夜間にやかんを焼かんで</li>
+          <li>いやー，すりすりしないでヤスリで</li>
+          <li>ハヤテのごとく！　また流行って</li>
         </ul>
 
         <a href = "index.html">元のページに戻る．</a>
