--- a/dajare.html
+++ b/dajare.html
@@ -10,6 +10,19 @@
 
         <h1>思いついただじゃれ一覧</h1>
 
+        <p>
+          <i>
+            紡がれただじゃれのひとつひとつ そのエネルギーは世界をあたたかく包み込み
+            <br>
+            冷え切った身体に生命の息吹を与えるのです
+            <br>
+            さあ 今こそだじゃれを
+          </i>
+        </p>
+        <p style="text-align: right">
+          <i>だじゃれーぞんでぇとる 名取さな</i>
+        </p>
+
         <ul>
           <li>ドラム叩くドラ息子</li>
           <li>カーテンには勝てん</li>
