--- a/dajare.html
+++ b/dajare.html
@@ -10,18 +10,22 @@
 
         <h1>思いついただじゃれ一覧</h1>
 
-        <p>
-          <i>
-            紡がれただじゃれのひとつひとつ そのエネルギーは世界をあたたかく包み込み
-            <br>
-            冷え切った身体に生命の息吹を与えるのです
-            <br>
-            さあ 今こそだじゃれを
-          </i>
-        </p>
+        <div style=" border: 4px solid #fdeff2; padding: 2px;border-radius:10px ">
+            <div style=" background: #c0c0c0;border-radius:10px；font-size: 100%; padding: 20px;">
+                        <p>
+                          <i>
+                            紡がれただじゃれのひとつひとつ そのエネルギーは世界をあたたかく包み込み
+                            <br>
+                            冷え切った身体に生命の息吹を与えるのです
+                            <br>
+                            さあ 今こそだじゃれを
+                          </i>
+                        </p>
         <p style="text-align: right">
           <i>だじゃれーぞんでぇとる 名取さな</i>
         </p>
+            </div>
+        </div>
 
         <ul>
           <li>ドラム叩くドラ息子</li>
