--- a/dajare.html
+++ b/dajare.html
@@ -10,7 +10,7 @@
 
         <h1>思いついただじゃれ一覧</h1>
 
-        <div style=" border: 4px solid #fdeff2; padding: 2px;border-radius:10px ">
+        <div style=" border: 4px solid #c0c0c0; padding: 2px;border-radius:10px ">
             <div style=" background: #c0c0c0;border-radius:10px；font-size: 100%; padding: 20px;">
                         <p>
                           <i>
