--- a/dajare.html
+++ b/dajare.html
@@ -36,6 +36,8 @@
           <li>夜間にやかんを焼かんで</li>
           <li>いやー，すりすりしないでヤスリで</li>
           <li>ハヤテのごとく！　また流行って</li>
+          <li>石鹸で世間を石鹸</li>
+          <li>tabキーを度々間違えて押す</li>
         </ul>
 
         <a href = "index.html">元のページに戻る．</a>
