--- a/dajare.html
+++ b/dajare.html
@@ -21,11 +21,17 @@
                             さあ 今こそだじゃれを
                           </i>
                         </p>
-        <p style="text-align: right">
-          <i>だじゃれーぞんでぇとる 名取さな</i>
-        </p>
+                        <p style="text-align: right">
+                          <i>だじゃれーぞんでぇとる 名取さな</i>
+                        </p>
             </div>
         </div>
+
+        <p>
+          　僕は久米田作品の登場人物が好きです．
+          人並だから日塔奈美とか，部屋に篭りきりだから小森霧とか，きっちりしているから木津千里とか，描く仕事をしているから後藤可久士とか．
+          キャラクターの名前が覚えやすくて良いです．
+        </p>
 
         <ul>
           <li>ドラム叩くドラ息子</li>
