--- a/dajare.html
+++ b/dajare.html
@@ -28,7 +28,7 @@
         </div>
 
         <p>
-          　僕は久米田作品の登場人物が好きです．
+          　僕は久米田作品の登場人物の名前が好きです．
           人並だから日塔奈美とか，部屋に篭りきりだから小森霧とか，きっちりしているから木津千里とか，描く仕事をしているから後藤可久士とか．
           キャラクターの名前が覚えやすくて良いです．
         </p>
